--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="C:\Users\Dell\OneDrive\Pictures" class="img-fluid" alt="">
+            <img src="assets/1000023702.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UI/UX Designer</h3>
